--- a/server/tcpweblog_server.conf
+++ b/server/tcpweblog_server.conf
@@ -2,7 +2,7 @@
 # File name   : tcpweblog_server.conf
 # Begin       : 2012-04-12
 # Last Update : 2012-05-29
-# Version     : 2.0.0
+# Version     : 3.0.0
 #
 # Description : Configuration file for TCPWebLog-Server.
 #
@@ -41,7 +41,7 @@
 #==============================================================================+
 
 # LOGSERVER_PORT : TCP port where log server is listening.
-LOGSERVER_PORT=9940
+LOGSERVER_PORT="9940"
 
 # MAX_CONNECTIONS : Maximum number of connections to listen.
 MAX_CONNECTIONS=1000
