--- a/server/tcpweblog_server.conf
+++ b/server/tcpweblog_server.conf
@@ -1,8 +1,8 @@
 #==============================================================================+
 # File name   : tcpweblog_server.conf
 # Begin       : 2012-04-12
-# Last Update : 2012-05-29
-# Version     : 3.2.3
+# Last Update : 2012-11-23
+# Version     : 3.2.4
 #
 # Description : Configuration file for TCPWebLog-Server.
 #
@@ -17,7 +17,7 @@
 #               Aldershot
 #               Hampshire
 #               GU12 4RQ
-#				UK
+#               UK
 #               http://www.fubra.com
 #               support@fubra.com
 #
@@ -47,6 +47,8 @@ LOGSERVER_PORT="9940"
 MAX_CONNECTIONS=1000
 
 # ROOT_DIR : Root dir where to store splitted log files.
+# Apache files will be stored in <ROOT_DIR>/<CLUSTER_NUMBER>/logs/ip/<IP_ADDRESS>/
+# FTP files will be stored in <ROOT_DIR>/<CLUSTER_NUMBER>/logs/ftp/<FTP_USER>/
 ROOT_DIR="/cluster/"
 
 # PATH_TCPRECEIVER : Full path to tcpweblog_server.bin program.
